css/main.css
@import url('../fonts/fonts.css');

header {
    background-color: #000;
    padding-top: 48px;
    padding-bottom: 10px;
}

.nav-item a {
    /* font: 400 normal, 22px/31px "Droid Sans Regular" serif; */
    font-family: 'Droid Sans Regular' serif;
    font-weight: 400;
    font-size: 22px;
    line-height: 31px;
    color: #FFF;
    text-align: center;
    text-decoration: none;
}

.nav-link:hover {
    color: #FF0000;
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
}


.sixteen-nine {
    position: relative;
}

.sixteen-nine:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 13%;
}

.sixteen-nine>.content {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.row-greetings {
    padding-bottom: 100px;
}

.row-greetings h2 {
    font-size: 80px;
    letter-spacing: 1px;
    line-height: 93px;
    color: #000;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
    margin-bottom: 122px; 
}

.row-greetings p {
    padding-top: 20px;
    font-size: 27px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #000;
    font-family: "Droid Serif Regular" serif;
    font-weight: 400;
    text-align: center;
}

.row-greetings a {
    display: block;
    width: 64px;
    height: 64px;
    background-color: #2ECC71;
    margin: 0 auto;
    border-radius: 50%;
    text-align: center;
}

.row-greetings a>span {
    padding-top: 14px;
    font-size: 38px;
    color: #FFF;
    border-radius: 50%;
    text-align: center;
    margin-top: 0;
}

#about {
    background-color: #34495E;
}

.about-info h2 {
    padding: 128px 0 125px 0;
    font-size: 45px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #FFF;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
}

.about-info p {
    width: 770px;
    margin: 0 auto;
    font-size: 24px;
    letter-spacing: 1px;
    line-height: 33px;
    color: #FFF;
    font-family: 'Droid Serif Regular' serif;
    font-weight: 400;
    padding-bottom: 135px;
}

.service-card span {
    font-size: 75px;
    width: 140px;
    height: 140px;
    text-align: center;
    padding: 30px 0 0 0;
    color: #FFF;
    border: solid 3px #FFF;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

.service-card h3 {
    padding-top: 32px;
    font-size: 26px;
    letter-spacing: 0px;
    line-height: 33px;
    color: #FFF;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
}

.service-card p {
    padding-top: 35px;
    font-size: 20px;
    letter-spacing: 0px;
    line-height: 30px;
    color: #FFF;
    font-family: 'Droid Serif Regular' serif;
    font-weight: 400;
}

.service-card {
    justify-content: space-around;
    text-align: center;
    margin-bottom: 110px;
}


#portfolio h2 {
    padding-top: 126px;
    padding-bottom: 76px;
    font-size: 45px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #2C3E50;
    font-weight: 700;
    text-align: center;
}

.portfolio-item-list {
    justify-content: space-between;
    align-items: center;
}

.portfolio-item-list a {
    padding: 5px 20px;
    text-decoration: none;
    font-size: 30px;
    letter-spacing: 0px;
    line-height: 31px;
    border-radius: 20px;
    color: #2C3E50;
    font-weight: 400;
}

.portfolio-item-list a:hover {
    padding: 5px 20px;
    color: #FFF;
    background-color: #2ECC71;
    outline: none;
    transition: all 0.6s;
    -webkit-transition: all 0.6s ease-in;
    -moz-transition: all 0.6s;
    -ms-transition: all 0.6s;
    -o-transition: all 0.6s;
}

.portfolio-gallery {
    justify-content: center;
    margin-top: 108px;
    margin-bottom: 115px;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.gallery-item {
    position: relative;
    margin: 10px;
}


.gallery img {
   max-width: 348px;
    max-height: 260px;
    border: 10px solid #EEE;
    box-sizing: border-box;
    background-color: #2C3E50;
    opacity: 1;
}

.text-holder {
    visibility: hidden;
    max-width: 348px;
    flex-direction: column;
    position: absolute;
    max-width: 0 auto;
    border: 10px solid #EEE;
    background-color: #2C3E50;
    padding: 20px;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.text-holder h3 {
    font-size: 35px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #FFF;
    font-weight: 700;
    padding-top: 50px;
    padding-bottom: 50px;
    text-align: center;
}

.inf {
    text-decoration: none;
    width: 25%;
    height: auto;
    color: #FFF;
    border-radius: 15px;
    background-color: transparent;
    border: 2px solid #FFF;
    padding: 7px 15px;
    margin-left: 80px;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
}

.inf:hover {
    text-decoration: none;
    color: #FFF;
}

.gallery-item:hover > .text-holder {
    visibility: visible;
    opacity: 1;
}

#team {
    background-color: #2980B9;
}

#team h2 {
    padding-top: 122px;
    font-size: 45px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #FFF;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
}

.team-cards {
    margin-top: 68px;
}

.team-info {
    display: flex;
    padding-bottom: 110px;
}

.team-info img {
    height: 230px;
    width: 230px;
    border-radius: 115px;
    background-color: #FFF;
    border: #FFF 3px solid;
}

.team-info h3 {
    padding-top: 34px;
    font-size: 26px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #FFF;
    font-family: 'Droid Sans Bolds' serif;
    font-weight: 700;
    text-align: center;
}

.team-info p {
    padding-top: 40px;
    padding-bottom: 55px;
    font-size: 20px;
    letter-spacing: 0px;
    line-height: 30px;
    color: #FFF;
    font-family: 'Droid Serif Regular' serif;
    font-weight: 400;
    text-align: center;
}

.social {
    justify-content: space-around;
}

.social span {
    font-size: 50px;
    width: 84px;
    text-align: center;
    padding: 15px;
    color: #FFF;
    border: 2px solid #FFF;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

.social span:hover {
    color: #000;
    background-color: #FFF;
    transition: 0.8s all;
    -webkit-transition: 0.8s all;
    -moz-transition: 0.8s all;
    -ms-transition: 0.8s all;
    -o-transition: 0.8s all;
}

#contact h2 {
    padding-top: 122px;
    padding-bottom: 68px;
    font-size: 45px;
    letter-spacing: 0px;
    line-height: 31px;
    color: #2C3E50;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
}

.contact-info {
    font-size: 26px;
    letter-spacing: 0px;
    line-height: 33px;
    color: #2C3E50;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
    padding-bottom: 88px;
}

.comment-form {
    margin-bottom: 112px;
}

input {
    font-size: 26px;
    letter-spacing: 0px;
    line-height: 33px;
    color: #2C3E50;
    font-family: 'Droid Serif Regular' serif;
    font-weight: 400;
    border-style: none;
    border-bottom: solid 2px #2ECC71;
}

.email {
    padding-top: 56px;
}

.message {
    resize: none;
    width: 73%;
    padding-top: 68px;
    font-size: 26px;
    line-height: 33px;
    color: #2C3E50;
    font-family: 'Droid Serif Regular' serif;
    font-weight: 400;
    border-style: none;
    border-bottom: solid 2px #2ECC71;
    padding-bottom: 48px;
}

.btn {
    width: 130px;
    height: 47px;
    font-size: 22px;
    border-radius: 20px;
    color: #FFF;
    background-color: #2ECC71;
    padding: 5px;
    margin-top: 48px;
}

.btn:hover {
    background-color: #FFF;
    color: #2ECC71;
    border: #2ECC71 2px solid;
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -ms-transition: 0.5s all;
    -o-transition: 0.5s all;
}

.address {
    display: flex;
    flex-direction: column;
    margin-bottom: 100px;
}

.address p {
    width: 75%;
    font-size: 20px;
    letter-spacing: 0px;
    line-height: 33px;
    color: #2C3E50;
    font-family: 'Droid Sans Regular' serif;
    font-weight: 400;
    font-style: normal;
}

.refs {
    font-size: 20px;
}

.refs:hover {
    text-decoration: none;
    color: #FF0000;
}

.address span {
    font-size: 16px;
    font-weight: 700;
}

footer {
    background-color: #34495E;
    height: 282px;
}

footer .logo {
    padding-top: 76px;
    padding-bottom: 44px;
}

.f-address p {
    font-size: 16px;
    letter-spacing: 0px;
    line-height: 26px;
    color: #FFF;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-decoration: none;
}

.referenses {
    align-items: flex-start;
}

.referenses a {
    text-decoration: none;
    color: #FFF;
    font-size: 16px;
    letter-spacing: 0px;
    line-height: 26px;
    font-family: 'Droid Sans Bold' serif;
    font-weight: 700;
    text-align: center;
    font-style: normal;
}

.referenses a:hover {
    color: #FF0000;
}

.f-social a {
    display: block;
    width: 56px;
    height: 56px;
    padding-top: 8px;
    padding-left: 10px;
    color: #FFF;
    border: solid 2px #FFF;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

.f-social a:hover {
    color: #000;
    background-color: #FFF;
    transition: 0.8s all;
    -webkit-transition: 0.8s all;
    -moz-transition: 0.8s all;
    -ms-transition: 0.8s all;
    -o-transition: 0.8s all;
}

.f-social span {
    font-size: 36px;
    text-align: center;
}

